replaced List.of with Arrays.asList to be java 8 compatible